Doc/force-app/main/default/objects/Product_Component__c/Product_Component__c.object-meta.xml
<CustomObject>
    <description>Individual line items within a product package.  A product represents a specific configuration of product components</description>
    <label>Product Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>