Doc/force-app/main/default/objects/Product_Component__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Allows the user to specify additional information regarding this product component.</description>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>