Doc/force-app/main/default/objects/Product_Component__c/fields/Component_Code__c.field-meta.xml
<CustomField>
    <fullName>Component_Code__c</fullName>
    <description>Component serial number/code</description>
    <displayFormat>PC{00000000}</displayFormat>
    <label>Component Code</label>
    <type>AutoNumber</type>
</CustomField>