Doc/force-app/main/default/objects/Product_Component__c/fields/HardwareProductID__c.field-meta.xml
<CustomField>
    <fullName>HardwareProductID__c</fullName>
    <description>This is the ProductID that correlates to the actual hardware ID for the device.</description>
    <label>HardwareProductID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>