Doc/force-app/main/default/objects/Product_Component__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Describes the number of hours associated with this service.</description>
    <label>Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>