Doc/force-app/main/default/objects/Product_Component__c/fields/RB_Reads__c.field-meta.xml
<CustomField>
    <fullName>RB_Reads__c</fullName>
    <defaultValue>99</defaultValue>
    <label>RB_Reads</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>