Doc/force-app/main/default/objects/Product_Component__c/fields/Series_Number__c.field-meta.xml
<CustomField>
    <fullName>Series_Number__c</fullName>
    <description>Designates what series appliance this is.</description>
    <label>Series Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>