Doc/force-app/main/default/objects/Product_Component__c/fields/Shipping_Length__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Length__c</fullName>
    <description>Length in inches</description>
    <label>Shipping Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>