Doc/force-app/main/default/objects/Product_Component__c/fields/Shipping_Required__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Required?</label>
    <type>Checkbox</type>
</CustomField>