Doc/force-app/main/default/objects/Product_Component__c/recordTypes/Hardware.recordType-meta.xml
<RecordType>
    <fullName>Hardware</fullName>
    <active>true</active>
    <description>Hardware product components such as an appliance</description>
    <label>Hardware</label>
</RecordType>