Doc/force-app/main/default/objects/Product_Component__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>The record type to be used for services such as training.</description>
    <label>Service</label>
</RecordType>