Doc/force-app/main/default/objects/Product_Component__c/recordTypes/Software.recordType-meta.xml
<RecordType>
    <fullName>Software</fullName>
    <active>true</active>
    <description>Software product components such as ethical walls.</description>
    <label>Software</label>
</RecordType>